# ros_qtc_plugin

./: .clang-tidy  CMakeLists.txt  README.md  clang-tidy.sh  install-sdk.py  setup.py  versions.yaml
.github/workflows/: main.yml
gh_pages/_source/: Improve-ROS-Qt-Creator-Plugin-Developers-ONLY.rst
packaging/: cpack-config.cmake  cpack.cmake  format-deb-url.py  qtcreator_deb_install.sh
src/project_manager/: CMakeLists.txt  ROSProjectManager.json.in  ros_build_configuration.cpp  ros_build_system.cpp  ros_build_system.h  ros_catkin_make_step.cpp  ros_catkin_tools_step.cpp  ros_colcon_step.cpp  ros_colcon_step.h  ros_colcon_step.ui  ros_package_wizard.cpp  ros_project.cpp  ros_project.h  ros_run_step.h  ros_utils.cpp  ros_utils.h
